syntax = "proto3";

package proto;
option go_package = "github.com/caldog20/zeronet/proto/gen;controllerv1";

import "controller/v1/peer.proto";
import "controller/v1/auth.proto";

service ControllerService {
  rpc LoginPeer(LoginPeerRequest) returns (LoginPeerResponse) {}
  rpc GetPKCEAuthInfo(GetPKCEAuthInfoRequest)
      returns (GetPKCEAuthInfoResponse) {}
}

message LoginPeerRequest {
  string machine_id = 1;
  string public_key = 2;
  string hostname = 3;
  string endpoint = 4;
  string access_token = 5;
}

message LoginPeerResponse { PeerConfig config = 2; }
